[metadata]
description-file = README.md

[flake8]
exclude=venv,build,docs
ignore=E128,E251,F841
max-line-length=99

[bdist_wheel]
universal=1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_django=django
line_length = 79
multi_line_output = 5
not_skip = __init__.py
skip = venv
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
